# MatrixPower

./: CMakeLists.txt  README.md  common.c  common.h  main.c  matrix.c  matrix.h  string_utils.c  string_utils.h  tests.c  tests.h
data/: 10(10000),1048576.csv  160(10000),1048576.csv  20(10000),1048576.csv  320(10000),1048576.csv  40(10000),1048576.csv  80(10000),1048576.csv  dlya_graphica.csv
data2/: 1.csv  2(64),1048576.csv  2.csv  3(64),1048576.csv  4(64),1048576.csv  5(64),1048576.csv  6(64),1048576.csv  7(64),1048576.csv  lab2.xlsx
files/: AaDS LW 2 4364 Karpeev Kotelnikov.docx  lab2.xlsx
final/: AaDS LW 2 4364 Karpeev Kotelnikov.docx  lab2.xlsx
final/data2/: 16bits.csv  2bits.csv  32bits.csv  4bits.csv  64bits.csv  64bits2.csv  8bits.csv
include/: common.h  inline_expansion.h  matrix.h  string_utils.h  tests.h
src/: common.c  main.c  matrix.c  string_utils.c  tests.c
